Added lane markings chapter

--- a/IEEEtran/bibliography.bib
+++ b/IEEEtran/bibliography.bib
@@ -67,3 +67,25 @@ author = {M. E. Bouzouraa},
 year = {2012}
 }
 
+@article {ransac,
+title={Lane Detection Method Based on Improved RANSAC Algorithm},
+author = {Jie Guo and Zhihua Wei and Duoqian Miao1},
+year = {2015}
+}
+
+@article {ransac1,
+author={A. Guiducci},
+title= {Parametric model of the perspective projection of aroad
+with applications to lane keeping and 3d road reconstruction},
+journal = {Computer Vision and Image Understanding 73},
+year = {1999}
+}
+
+@article {ransac2,
+author = {M. Fischler and R. Bones},
+title = {Random sample consensus: a paradigm
+for model fitting with applications to image analysis and automated
+cartography},
+year = {1999}
+}
+
