--- a/IEEEtran/bibliography.bib
+++ b/IEEEtran/bibliography.bib
@@ -89,3 +89,8 @@ cartography},
 year = {1999}
 }
 
+@article {hoffmann,
+author={U. Hoffmann},
+title={Zur visuellen Umfeldwahrnehmung autonomer Fahrzeuge},
+year={2004}
+}
